docs: update readme

--- a/.readme.md
+++ b/.readme.md
@@ -1,1 +1,2 @@
 [![Build Status](https://travis-ci.org/vdidi/login-clean-code.svg?branch=master)](https://travis-ci.org/vdidi/login-clean-code)
+[![Coverage Status](https://coveralls.io/repos/github/vdidi/login-clean-code/badge.svg)](https://coveralls.io/github/vdidi/login-clean-code)
